# py.openai-realtime

./: .gitignore  .mise.toml  README.md  pyproject.toml
examples/relay-server/: .gitignore  README.md  relay.py
src/pyoai_realtime/: __init__.py  constants.py  event_functions.py  event_handler.py  log.py  realtime_api.py  realtime_conversation.py  utils.py
src/pyoai_realtime/realtime_events/: __init__.py  base.py  conversation.py  conversation_events.py  input_audio_buffer.py  input_audio_buffer_events.py  message.py  other_events.py  response.py  response_events.py  session_events.py
tests/: test_audio.py  test_event_handler.py  test_realtime_api.py
