[project]
    name = "pyoai_realtime"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = []

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project.scripts]
    packaged-app = "pyoai_realtime:main"
