[project]
name = "pyoai_realtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["rich>=13.9.2", "websockets>=13.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "numpy>=2.1.2",
    "pydub>=0.25.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
pyoai-realtime = { workspace = true }

[project.scripts]
packaged-app = "pyoai_realtime:main"
test = "pytest:main"

[tool.ruff]
line-length = 120
